--- a/Back/Test.Common/Resources/UserMessageResource.resx
+++ b/Back/Test.Common/Resources/UserMessageResource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Actualizado" xml:space="preserve">
+    <value>Se ha actualizado los datos de la  empresa</value>
+  </data>
   <data name="Creado" xml:space="preserve">
     <value>El tramite se ha creado exitosamente</value>
   </data>
